[package]
name = "jq_proxy"
version = "0.1.0"
authors = ["Robbie Van Gorkom <robbie.van.gorkom@protonmail.com>"]
edition = "2018"


[[bin]]
name = "jq_proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
jq-rs = "0.4.1"
serde = "1.0.130"
curl = "0.4.38"
clap = "3.0.0-beta.4"
serde_yaml = "0.8.21"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"